virtualMachines/esp32/aggregator/grammar/generated-test/aggregator/grammar/WFLParser.js
// Generated from ./aggregator/grammar/WFL.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import WFLVisitor from './WFLVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class WFLParser extends antlr4.Parser {

    static grammarFileName = "WFL.g4";
    static literalNames = [ null, "'cluster'", "'{'", "'}'", "';'", "'deploy'", 
                            "'to'", "'program'", "'service'", "'daemon'", 
                            "'queue'", "'file'", "'bind'", "'manager'", 
                            "'name'", "'fallback'", "'mode'", "'path'", 
                            "'device'", "'url'", "'rotate'", "'maxsize'", 
                            "'evict'", "'after'", "'idle'", "'warm'", "'reload'", 
                            "'cold'", "'parent'", "'alternate'", "'ms'", 
                            "'second'", "'seconds'", "'minute'", "'minutes'", 
                            "'or'", "'and'", "'='", "'<>'", "'<'", "'<='", 
                            "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'mod'", 
                            "'not'", "'true'", "'false'", "'('", "')'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "IDENT", "NUMBER", 
                             "STRING", "LINE_COMMENT", "BLOCK_COMMENT", 
                             "WS" ];
    static ruleNames = [ "wflUnit", "clusterDecl", "clusterBody", "deployDecl", 
                         "deployTarget", "bindQueueDecl", "queueBindingBody", 
                         "bindFileDecl", "fileBindingBody", "evictDecl", 
                         "timeUnit", "expr", "logicalOrExpr", "logicalAndExpr", 
                         "equalityExpr", "relationalExpr", "additiveExpr", 
                         "multiplicativeExpr", "unaryExpr", "primaryExpr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = WFLParser.ruleNames;
        this.literalNames = WFLParser.literalNames;
        this.symbolicNames = WFLParser.symbolicNames;
    }



	wflUnit() {
	    let localctx = new WflUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, WFLParser.RULE_wflUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4198434) !== 0)) {
	            this.state = 45;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 40;
	                this.clusterDecl();
	                break;

	            case 2:
	                this.state = 41;
	                this.deployDecl();
	                break;

	            case 3:
	                this.state = 42;
	                this.bindQueueDecl();
	                break;

	            case 4:
	                this.state = 43;
	                this.bindFileDecl();
	                break;

	            case 5:
	                this.state = 44;
	                this.evictDecl();
	                break;

	            }
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(WFLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	clusterDecl() {
	    let localctx = new ClusterDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, WFLParser.RULE_clusterDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(WFLParser.T__0);
	        this.state = 53;
	        this.match(WFLParser.IDENT);
	        this.state = 54;
	        this.match(WFLParser.T__1);
	        this.state = 58;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===53) {
	            this.state = 55;
	            this.clusterBody();
	            this.state = 60;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 61;
	        this.match(WFLParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	clusterBody() {
	    let localctx = new ClusterBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, WFLParser.RULE_clusterBody);
	    try {
	        this.state = 66;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 63;
	            this.clusterDecl();
	            break;
	        case 53:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 64;
	            this.match(WFLParser.IDENT);
	            this.state = 65;
	            this.match(WFLParser.T__3);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deployDecl() {
	    let localctx = new DeployDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, WFLParser.RULE_deployDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(WFLParser.T__4);
	        this.state = 69;
	        this.deployTarget();
	        this.state = 70;
	        this.match(WFLParser.T__5);
	        this.state = 71;
	        this.match(WFLParser.T__0);
	        this.state = 72;
	        this.match(WFLParser.IDENT);
	        this.state = 73;
	        this.match(WFLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deployTarget() {
	    let localctx = new DeployTargetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, WFLParser.RULE_deployTarget);
	    try {
	        this.state = 85;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 7:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 75;
	            this.match(WFLParser.T__6);
	            this.state = 76;
	            this.match(WFLParser.IDENT);
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 77;
	            this.match(WFLParser.T__7);
	            this.state = 78;
	            this.match(WFLParser.IDENT);
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 79;
	            this.match(WFLParser.T__8);
	            this.state = 80;
	            this.match(WFLParser.IDENT);
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 81;
	            this.match(WFLParser.T__9);
	            this.state = 82;
	            this.match(WFLParser.IDENT);
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 83;
	            this.match(WFLParser.T__10);
	            this.state = 84;
	            this.match(WFLParser.IDENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bindQueueDecl() {
	    let localctx = new BindQueueDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, WFLParser.RULE_bindQueueDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(WFLParser.T__11);
	        this.state = 88;
	        this.match(WFLParser.T__9);
	        this.state = 89;
	        this.match(WFLParser.IDENT);
	        this.state = 90;
	        this.queueBindingBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	queueBindingBody() {
	    let localctx = new QueueBindingBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, WFLParser.RULE_queueBindingBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(WFLParser.T__12);
	        this.state = 93;
	        this.match(WFLParser.IDENT);
	        this.state = 94;
	        this.match(WFLParser.T__13);
	        this.state = 95;
	        this.match(WFLParser.STRING);
	        this.state = 96;
	        this.match(WFLParser.T__0);
	        this.state = 97;
	        this.match(WFLParser.IDENT);
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 98;
	            this.match(WFLParser.T__14);
	            this.state = 99;
	            this.match(WFLParser.IDENT);
	        }

	        this.state = 104;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===16) {
	            this.state = 102;
	            this.match(WFLParser.T__15);
	            this.state = 103;
	            this.match(WFLParser.IDENT);
	        }

	        this.state = 106;
	        this.match(WFLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bindFileDecl() {
	    let localctx = new BindFileDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, WFLParser.RULE_bindFileDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(WFLParser.T__11);
	        this.state = 109;
	        this.match(WFLParser.T__10);
	        this.state = 110;
	        this.match(WFLParser.IDENT);
	        this.state = 111;
	        this.fileBindingBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fileBindingBody() {
	    let localctx = new FileBindingBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, WFLParser.RULE_fileBindingBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 17:
	            this.state = 113;
	            this.match(WFLParser.T__16);
	            this.state = 114;
	            this.match(WFLParser.STRING);
	            break;
	        case 18:
	            this.state = 115;
	            this.match(WFLParser.T__17);
	            this.state = 116;
	            this.match(WFLParser.STRING);
	            break;
	        case 19:
	            this.state = 117;
	            this.match(WFLParser.T__18);
	            this.state = 118;
	            this.match(WFLParser.STRING);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 121;
	        this.match(WFLParser.T__0);
	        this.state = 122;
	        this.match(WFLParser.IDENT);
	        this.state = 125;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===16) {
	            this.state = 123;
	            this.match(WFLParser.T__15);
	            this.state = 124;
	            this.match(WFLParser.IDENT);
	        }

	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 127;
	            this.match(WFLParser.T__19);
	            this.state = 128;
	            this.match(WFLParser.IDENT);
	        }

	        this.state = 133;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 131;
	            this.match(WFLParser.T__20);
	            this.state = 132;
	            this.expr();
	        }

	        this.state = 135;
	        this.match(WFLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	evictDecl() {
	    let localctx = new EvictDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, WFLParser.RULE_evictDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(WFLParser.T__21);
	        this.state = 138;
	        this.match(WFLParser.T__7);
	        this.state = 139;
	        this.match(WFLParser.IDENT);
	        this.state = 140;
	        this.match(WFLParser.T__22);
	        this.state = 141;
	        this.match(WFLParser.T__23);
	        this.state = 142;
	        this.expr();
	        this.state = 143;
	        this.timeUnit();
	        this.state = 148;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 25:
	        	this.state = 144;
	        	this.match(WFLParser.T__24);
	        	this.state = 145;
	        	this.match(WFLParser.T__25);
	        	break;
	        case 27:
	        	this.state = 146;
	        	this.match(WFLParser.T__26);
	        	this.state = 147;
	        	this.match(WFLParser.T__25);
	        	break;
	        case 4:
	        case 15:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 152;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 150;
	            this.match(WFLParser.T__14);
	            this.state = 151;
	            _la = this._input.LA(1);
	            if(!(_la===28 || _la===29)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 154;
	        this.match(WFLParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timeUnit() {
	    let localctx = new TimeUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, WFLParser.RULE_timeUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        _la = this._input.LA(1);
	        if(!(((((_la - 30)) & ~0x1f) === 0 && ((1 << (_la - 30)) & 31) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, WFLParser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.logicalOrExpr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalOrExpr() {
	    let localctx = new LogicalOrExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, WFLParser.RULE_logicalOrExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.logicalAndExpr();
	        this.state = 165;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===35) {
	            this.state = 161;
	            this.match(WFLParser.T__34);
	            this.state = 162;
	            this.logicalAndExpr();
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalAndExpr() {
	    let localctx = new LogicalAndExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, WFLParser.RULE_logicalAndExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.equalityExpr();
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===36) {
	            this.state = 169;
	            this.match(WFLParser.T__35);
	            this.state = 170;
	            this.equalityExpr();
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	equalityExpr() {
	    let localctx = new EqualityExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, WFLParser.RULE_equalityExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.relationalExpr();
	        this.state = 181;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===37 || _la===38) {
	            this.state = 177;
	            _la = this._input.LA(1);
	            if(!(_la===37 || _la===38)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 178;
	            this.relationalExpr();
	            this.state = 183;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationalExpr() {
	    let localctx = new RelationalExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, WFLParser.RULE_relationalExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 184;
	        this.additiveExpr();
	        this.state = 189;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 15) !== 0)) {
	            this.state = 185;
	            _la = this._input.LA(1);
	            if(!(((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 15) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 186;
	            this.additiveExpr();
	            this.state = 191;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	additiveExpr() {
	    let localctx = new AdditiveExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, WFLParser.RULE_additiveExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.multiplicativeExpr();
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===43 || _la===44) {
	            this.state = 193;
	            _la = this._input.LA(1);
	            if(!(_la===43 || _la===44)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 194;
	            this.multiplicativeExpr();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplicativeExpr() {
	    let localctx = new MultiplicativeExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, WFLParser.RULE_multiplicativeExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 200;
	        this.unaryExpr();
	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 45)) & ~0x1f) === 0 && ((1 << (_la - 45)) & 7) !== 0)) {
	            this.state = 201;
	            _la = this._input.LA(1);
	            if(!(((((_la - 45)) & ~0x1f) === 0 && ((1 << (_la - 45)) & 7) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 202;
	            this.unaryExpr();
	            this.state = 207;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unaryExpr() {
	    let localctx = new UnaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, WFLParser.RULE_unaryExpr);
	    var _la = 0;
	    try {
	        this.state = 211;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	        case 48:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 208;
	            _la = this._input.LA(1);
	            if(!(_la===44 || _la===48)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 209;
	            this.unaryExpr();
	            break;
	        case 49:
	        case 50:
	        case 51:
	        case 53:
	        case 54:
	        case 55:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 210;
	            this.primaryExpr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primaryExpr() {
	    let localctx = new PrimaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, WFLParser.RULE_primaryExpr);
	    try {
	        this.state = 222;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 54:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 213;
	            this.match(WFLParser.NUMBER);
	            break;
	        case 55:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 214;
	            this.match(WFLParser.STRING);
	            break;
	        case 49:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 215;
	            this.match(WFLParser.T__48);
	            break;
	        case 50:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 216;
	            this.match(WFLParser.T__49);
	            break;
	        case 53:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 217;
	            this.match(WFLParser.IDENT);
	            break;
	        case 51:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 218;
	            this.match(WFLParser.T__50);
	            this.state = 219;
	            this.expr();
	            this.state = 220;
	            this.match(WFLParser.T__51);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

WFLParser.EOF = antlr4.Token.EOF;
WFLParser.T__0 = 1;
WFLParser.T__1 = 2;
WFLParser.T__2 = 3;
WFLParser.T__3 = 4;
WFLParser.T__4 = 5;
WFLParser.T__5 = 6;
WFLParser.T__6 = 7;
WFLParser.T__7 = 8;
WFLParser.T__8 = 9;
WFLParser.T__9 = 10;
WFLParser.T__10 = 11;
WFLParser.T__11 = 12;
WFLParser.T__12 = 13;
WFLParser.T__13 = 14;
WFLParser.T__14 = 15;
WFLParser.T__15 = 16;
WFLParser.T__16 = 17;
WFLParser.T__17 = 18;
WFLParser.T__18 = 19;
WFLParser.T__19 = 20;
WFLParser.T__20 = 21;
WFLParser.T__21 = 22;
WFLParser.T__22 = 23;
WFLParser.T__23 = 24;
WFLParser.T__24 = 25;
WFLParser.T__25 = 26;
WFLParser.T__26 = 27;
WFLParser.T__27 = 28;
WFLParser.T__28 = 29;
WFLParser.T__29 = 30;
WFLParser.T__30 = 31;
WFLParser.T__31 = 32;
WFLParser.T__32 = 33;
WFLParser.T__33 = 34;
WFLParser.T__34 = 35;
WFLParser.T__35 = 36;
WFLParser.T__36 = 37;
WFLParser.T__37 = 38;
WFLParser.T__38 = 39;
WFLParser.T__39 = 40;
WFLParser.T__40 = 41;
WFLParser.T__41 = 42;
WFLParser.T__42 = 43;
WFLParser.T__43 = 44;
WFLParser.T__44 = 45;
WFLParser.T__45 = 46;
WFLParser.T__46 = 47;
WFLParser.T__47 = 48;
WFLParser.T__48 = 49;
WFLParser.T__49 = 50;
WFLParser.T__50 = 51;
WFLParser.T__51 = 52;
WFLParser.IDENT = 53;
WFLParser.NUMBER = 54;
WFLParser.STRING = 55;
WFLParser.LINE_COMMENT = 56;
WFLParser.BLOCK_COMMENT = 57;
WFLParser.WS = 58;

WFLParser.RULE_wflUnit = 0;
WFLParser.RULE_clusterDecl = 1;
WFLParser.RULE_clusterBody = 2;
WFLParser.RULE_deployDecl = 3;
WFLParser.RULE_deployTarget = 4;
WFLParser.RULE_bindQueueDecl = 5;
WFLParser.RULE_queueBindingBody = 6;
WFLParser.RULE_bindFileDecl = 7;
WFLParser.RULE_fileBindingBody = 8;
WFLParser.RULE_evictDecl = 9;
WFLParser.RULE_timeUnit = 10;
WFLParser.RULE_expr = 11;
WFLParser.RULE_logicalOrExpr = 12;
WFLParser.RULE_logicalAndExpr = 13;
WFLParser.RULE_equalityExpr = 14;
WFLParser.RULE_relationalExpr = 15;
WFLParser.RULE_additiveExpr = 16;
WFLParser.RULE_multiplicativeExpr = 17;
WFLParser.RULE_unaryExpr = 18;
WFLParser.RULE_primaryExpr = 19;

class WflUnitContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = WFLParser.RULE_wflUnit;
    }

	EOF() {
	    return this.getToken(WFLParser.EOF, 0);
	};

	clusterDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ClusterDeclContext);
	    } else {
	        return this.getTypedRuleContext(ClusterDeclContext,i);
	    }
	};

	deployDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeployDeclContext);
	    } else {
	        return this.getTypedRuleContext(DeployDeclContext,i);
	    }
	};

	bindQueueDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BindQueueDeclContext);
	    } else {
	        return this.getTypedRuleContext(BindQueueDeclContext,i);
	    }
	};
